manifests/traefik/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - "--api.insecure=true"
            - "--providers.kubernetescrd"
          ports:
            - containerPort: 80
            - containerPort: 443
